--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </div>
       <div class="right-first column">
         <div class="header">
-          <h3 class="text uppercase mb-1">Diseñadora y programadora web</h3>
-          <h3 class="text uppercase">33 años - Tel 1123864196 - CABA</h3>
+          <h3 class="text description-text uppercase mb-1">Diseñadora y programadora web</h3>
+          <h3 class="text description-text uppercase">33 años - Tel 1123864196 - CABA</h3>
         </div>
         <div class="row container-description">
           <div class="description">
