Added max-height to first section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styless.css" />
   </head>
   <body>
-    <section class="section row">
+    <section class="section first-section row">
       <div class="left-first column relative">
         <img class="photo" src="images/foto.png" />
         <h1 class="name text">Ana Flynn</h1>
